Have email header

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Mobilization TDD Workshop</string>
+    <string name="email_header">Email</string>
 </resources>
