--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Mobilization TDD Workshop</string>
     <string name="email_header">Email</string>
+    <string name="password_header">password</string>
 </resources>
