--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="password_header">password</string>
     <string name="login_button">Login</string>
     <string name="login_call_error">api call error</string>
+    <string name="empty_email_error">Email cannot be empty</string>
 </resources>
