--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="login_button">Login</string>
     <string name="login_call_error">api call error</string>
     <string name="empty_email_error">Email cannot be empty</string>
+    <string name="empty_password_error">Password cannot be empty.</string>
 </resources>
