--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Mobilization TDD Workshop</string>
     <string name="email_header">Email:</string>
 	<string name="password_header">Password</string>
+	<string name="login_button_label">Login</string>
 </resources>
