should_show_error_if_email_is_empty

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="email_header">Email:</string>
     <string name="password_header">password</string>
     <string name="login">Login</string>
+    <string name="empty_email_message">Empty email</string>
 </resources>
